2006/08/16 1.3:
 - Added SourceHook support for functions that return references.
 - Added some extra information to the "meta game" command: Description and Interface. For
    example, CS:S would display "Counter-Strike: Source" and "ServerGameDLL004."
 - Added some extra functionality to ISmmPluginManager.
 - Added compiling support for MSVC 8.0 (Visual Studio 2005) and GCC 4.x
 - Added another API helper function for formatting and searching for interfaces.
 - Updated project files and source tree to use the latest HL2SDK.
 - Updated the sample plugins to be a bit cleaner and use newer API.
 - Fixed bug where Metamod:Source could load the wrong GameDLL and/or load more than one
    GameDLL. This issue occured in HL2 CTF, SourceForts, or any other mod that relied on
    files from another mod directory.
 - Fixed bug where ISmmAPI::MetaFactory() would return the wrong interface when trying to
    retrieve ISmmPluginManager.
 - Fixed bug where returning false in Load() after adding a Metamod event listener or
    hooking a function could cause a crash instead of rejecting the plugin.
 - Fixed bug where trying to load Metamod:Source a second time as a SourceMM or Valve
    server plugin could cause a crash.
 - Fixed a bug in FormatIface() that caused InterfaceSearch() to infinite loop.

2006/06/14 1.2.3:
 - Added SourceHook API for manual recalls: RETURN_META_(VALUE_)MNEWPARAMS
 - Added support for ServerGameDLL005 (latest HL2DM update)

2006/05/25 1.2.2:
 - Added the ability to "alias" plugin names in metaplugins.ini.
 - Added "meta alias" command.
 - Added SourceHook API for manual callclasses.
 - Added support for the latest Source engine (ServerGameDLL005).
 - Added API for printing text in a client's console with ClientConPrintf. This does the
    same thing as IVEngineServer::ClientPrintf except that it allows string formatting.
 - Added client version of "meta" command in order to allow clients to view version 
    information and a list of loaded plugins.