@@ -13,8 +13,8 @@ DEBUG_FLAGS = -g -ggdb3
 CPP = gcc-4.1
 BINARY = server_i486.so
 
-OBJECTS = oslink.cpp util.cpp convar.cpp concommands.cpp \
-	CSmmAPI.cpp sourcemm.cpp CPlugin.cpp sourcehook.cpp
+OBJECTS = oslink.cpp util.cpp convar.cpp strtools.cpp concommands.cpp \
+          CSmmAPI.cpp sourcemm.cpp CPlugin.cpp sourcehook.cpp
 
 LINK = vstdlib_i486.so tier0_i486.so -static-libgcc
 
@@ -33,7 +33,7 @@ endif
 
 GCC_VERSION := $(shell $(CPP) -dumpversion >&1 | cut -b1)
 
-CFLAGS += -D_LINUX -DNDEBUG -Dstricmp=strcasecmp -D_stricmp=strcasecmp -D_strnicmp=strncasecmp -Dstrnicmp=strncasecmp -D_snprintf=snprintf -D_vsnprintf=vsnprintf -D_alloca=alloca -Dstrcmpi=strcasecmp -Wall -Wno-non-virtual-dtor -Werror -fPIC -fno-exceptions -fno-rtti -msse
+CFLAGS += -D_LINUX -DNDEBUG -DHAVE_LONG_LONG -Dstricmp=strcasecmp -D_stricmp=strcasecmp -D_strnicmp=strncasecmp -Dstrnicmp=strncasecmp -D_snprintf=snprintf -D_vsnprintf=vsnprintf -D_alloca=alloca -Dstrcmpi=strcasecmp -Wall -Wno-non-virtual-dtor -Werror -fPIC -fno-exceptions -fno-rtti -msse
 
 ifeq "$(GCC_VERSION)" "4"
 	CFLAGS += $(GCC4_FLAGS)
@@ -49,6 +49,7 @@ all:
 	ln -sf $(SRCDS)/bin/vstdlib_i486.so vstdlib_i486.so
 	ln -sf $(SRCDS)/bin/tier0_i486.so tier0_i486.so
 	ln -sf $(HL2SDK)/tier1/convar.cpp convar.cpp
+	ln -sf $(HL2SDK)/tier1/strtools.cpp strtools.cpp
 	ln -sf $(SMM_ROOT)/sourcehook/sourcehook.cpp sourcehook.cpp
 	$(MAKE) sourcemm
 	rm -rf $(BINARY)
