@@ -1,3 +1,8 @@
+2006/09/06 1.3a:
+ - Fixed a building issue on Linux which caused unresolved symbol errors when trying to
+   to load Metamod:Source on a game using an older set of engine libraries. This fix should
+   now allow Metamod:Source to run with The Ship on Linux.
+
 2006/08/16 1.3:
  - Added SourceHook support for functions that return references.
  - Added some extra information to the "meta game" command: Description and Interface. For
